1. max-width attribute added to post-title in theme.scss to prevent a long title to stretch out of box and shift date box. 2. a New post name 'how to type..,' is added. 3. default theme posts are removed.

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -154,6 +154,7 @@ header {
 	color: #222;
 	transition: color .3s ease;
 	margin: .1em 0;
+	max-width: 500px; // this prevent calender to shorten when title is long in home.html
 	&:hover {
 		color: $gray;
 		border-bottom: 0;
